2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-22  Jody Goldberg <jody@gnome.org>

	* gnome-keybinding-properties.c (reload_key_entries) : split the
	  obvious media keys into a distinct category.  Call it 'Sound' to
	  avoid string freeze problems.

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-17  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=128164
	* gnome-keybinding-properties.c (accel_edited_callback) : don't use
	  get_real_model.  The selection is based on the sorted model.
	(accel_cleared_callback) : ditto, and fix a leak while I'm in here.

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-12  Mark McLoughlin  <mark@skynet.ie>

	* gnome-keybinding-properties.c: (cb_dialog_response): Update help link
	to point to user-guide.xml

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

Tue Nov 18 12:23:26 2003  Jonathan Blandford  <jrb@redhat.com>

	* eggcellrendererkeys.[ch]: Patch from Bastien Nocera to to handle
	keycodes as well as keysyms.

	* eggaccelerators.[ch]: handle keycodes.

	* gnome-keybinding-properties.c: handle keycodes.

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-08-01  Dennis Cranston  <dennis_cranston at yahoo com>

	* gnome-keybinding-properties.glade: Patch to fix spacing between 
	action area and vbox of preferences dialog.

Fri Jul 25 16:29:29 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-keybinding-properties.c (desktop_key_list): Patch from
	Ghee Teo to move the key bindings to the right place.

2003-07-11  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-keybinding-properties.glade:  Minor HIG widget padding
	adjustments.

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4
